# simple-grpc-py

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
proto/simple_service/v1/: simple_retry_api.proto
simple_grpc_py/: configured_retry_client.py  constants.py  manual_retry_client.py  server.py  simple_retry_api_impl.py
